# rustdesk_fork

./: .gitignore  Cargo.toml  HARDENING_STATUS.md  README.md  build.py  build.rs  deny.toml  requirements.html  rust-toolchain.toml  vcpkg.json
.cargo/: config.toml
.github/workflows/: DISABLED.md  ci.yml.disabled  flutter-build.yml
docs/: DEPLOYMENT.md  HOST-KEY-PIN.md  NATIVE-CODEC-WATCH.md  TRANSPORT-SECURITY.md
examples/: flood_probe.rs  mdwe_codec_probe.rs  probe_client.rs  seed_password.rs
flutter/: build_fdroid.sh  ios_arm64.sh  ndk_arm.sh  ndk_arm64.sh  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/ios/Runner/: Info.plist  Runner.entitlements
flutter/lib/: common.dart  consts.dart  main.dart
flutter/lib/common/: shared_state.dart
flutter/lib/common/formatter/: id_formatter.dart
flutter/lib/common/hbbs/: hbbs.dart
flutter/lib/common/widgets/: address_book.dart  autocomplete.dart  connection_page_title.dart  dialog.dart  login.dart  peer_card.dart  peer_tab_page.dart  peers_view.dart  setting_widgets.dart  toolbar.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_home_page.dart  desktop_setting_page.dart  file_manager_page.dart  file_manager_tab_page.dart  install_page.dart  port_forward_page.dart  port_forward_tab_page.dart  remote_page.dart  remote_tab_page.dart  server_page.dart  terminal_connection_manager.dart  terminal_page.dart  terminal_tab_page.dart  view_camera_page.dart  view_camera_tab_page.dart
flutter/lib/desktop/widgets/: remote_toolbar.dart
flutter/lib/mobile/pages/: connection_page.dart  file_manager_page.dart  remote_page.dart  scan_page.dart  server_page.dart  settings_page.dart  terminal_page.dart  view_camera_page.dart
flutter/lib/mobile/widgets/: dialog.dart
flutter/lib/models/: ab_model.dart  desktop_render_texture.dart  group_model.dart  model.dart  peer_tab_model.dart  server_model.dart  state_model.dart  user_model.dart
flutter/lib/utils/: multi_window_manager.dart
flutter/lib/web/: bridge.dart
flutter/test/: address_validator_test.dart
libs/address_it/: Cargo.toml
libs/address_it/src/: lib.rs
libs/address_it/tests/: address.rs
libs/clipboard/src/: lib.rs
libs/clipboard/src/platform/: mod.rs  windows.rs
libs/clipboard/src/windows/: wf_cliprdr.c
libs/compress_it/: Cargo.toml
libs/compress_it/src/: lib.rs
libs/compress_it/tests/: compress.rs
libs/config_it/: Cargo.toml
libs/config_it/src/: lib.rs
libs/config_it/tests/: ipc_socket_mode.rs  lockdown.rs  prs_derivation.rs  r_s15.rs
libs/cpace_it/: Cargo.toml
libs/cpace_it/src/: lib.rs
libs/cpace_it/tests/: guess_limiter_cap.rs  handshake.rs
libs/hbb_common/: Cargo.toml
libs/hbb_common/protos/: message.proto  rendezvous.proto
libs/hbb_common/src/: address.rs  bytes_codec.rs  compress.rs  config.rs  cpace.rs  fs.rs  host_pin.rs  lib.rs  native_worker_sandbox.rs  password_security.rs  proxy.rs  socket_client.rs  socket_surface.rs  stream.rs  tcp.rs  tls.rs  verifier.rs  webrtc.rs  websocket.rs
libs/hbb_common/src/config/: permanent_password.rs
libs/hbb_common/src/platform/: linux.rs
libs/host_pin_it/: Cargo.toml
libs/host_pin_it/src/: lib.rs
libs/host_pin_it/tests/: host_pin.rs
libs/pake/: Cargo.toml  README.md
libs/pake/src/: lib.rs  tests.rs
libs/portable/: generate.py
libs/scrap/: Cargo.toml
libs/scrap/src/: lib.rs
libs/scrap/src/android/: ffi.rs
libs/scrap/src/common/: codec.rs  linux.rs  mod.rs
libs/surface_it/: Cargo.toml
libs/surface_it/src/: lib.rs
libs/surface_it/tests/: surface.rs
res/: bump.sh  rustdesk.service
res/msi/: preprocess.py
res/msi/Package/: Package.wxs
res/vcpkg/aom/: portfile.cmake
res/vcpkg/libyuv/: portfile.cmake
res/win/: README.md  flutter_tools-package_config.json
scripts/: Dockerfile.android-builder  Dockerfile.apple-check  Dockerfile.audit  Dockerfile.dart-audit  Dockerfile.deb-builder  Dockerfile.devcheck  Dockerfile.fluttercheck  Dockerfile.win-helper  README.md  android-apk-build.sh  android-isolated-services-smoke.sh  apple-cc-shim.sh  apple-conform-check.sh  audit.sh  autounattend.xml  build-android.sh  build-debian.sh  build-windows-vm.sh  build-windows.ps1  canonicalize-msi.py  canonicalize-pe.py  cleanup.sh  dart-audit-ignores.txt  dart-audit.sh  dart-verify.sh  flutter-offline-shim.sh  flutter-verify.sh  frb-codegen.sh  host-provision.sh  lib.sh  native-codec-watch.sh  online-fetch.sh  pins.env  provision-windows-vm.sh  run-build.ps1  smoke-bind-loopback.c  smoke-server.sh  verify-release.sh  verify-windows-golden.sh  verify.sh  (+1 more)
scripts/win/: cargo-check.ps1  run-cargo-check.bat  winenv.ps1
src/: auth_2fa.rs  cli.rs  client.rs  clipboard.rs  clipboard_file.rs  common.rs  core_main.rs  direct_service.rs  flutter.rs  flutter_ffi.rs  hbbs_http.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  lib.rs  main.rs  native_audio_worker.rs  native_clipboard_service.rs  native_clipboard_worker.rs  native_file_contents_worker.rs  native_file_descriptor_worker.rs  native_printer_worker.rs  native_video_worker.rs  native_zstd_service.rs  peer_text.rs  port_forward.rs  rendezvous_mediator.rs  server.rs  tray.rs  ui.rs  ui_cm_interface.rs  ui_interface.rs  ui_session_interface.rs
src/client/: file_trait.rs  io_loop.rs
src/hbbs_http/: account.rs  http_client.rs  record_upload.rs  sync.rs
src/ipc/: auth.rs  fs.rs
src/lang/: ar.rs  be.rs  bg.rs  ca.rs  cn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  eo.rs  es.rs  et.rs  eu.rs  fa.rs  fi.rs  fr.rs  ge.rs  gu.rs  he.rs  hi.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  kz.rs  lt.rs  lv.rs  ml.rs  nb.rs  nl.rs  pl.rs  pt_PT.rs  ptbr.rs  ro.rs  ru.rs  sc.rs  sk.rs  (+11 more)
src/platform/: linux.rs  linux_desktop_manager.rs  macos.mm  macos.rs  mod.rs  windows.rs
src/platform/windows/: acl.rs
src/server/: clipboard_service.rs  connection.rs  display_service.rs  input_service.rs  login_failure_check.rs  portable_service.rs  video_service.rs  wayland.rs
src/ui/: ab.tis  cm.rs  cm.tis  common.tis  header.tis  index.tis  install.tis  msgbox.tis  remote.rs
(+22 files in other folders)
