[package]
name = "rustdesk"
version = "1.4.7"
authors = ["rustdesk <info@rustdesk.com>"]
edition = "2021"
build= "build.rs"
description = "RustDesk Remote Desktop"
default-run = "rustdesk"
rust-version = "1.75"

[lib]
name = "librustdesk"
crate-type = ["cdylib", "staticlib", "rlib"]

# R-X4: the `naming` bin generated the exe-name branding (rustdesk-host=... .exe)
# that the inherited get_license_from_exe_name trust-anchor override parsed; it is
# excised — the fork's trust anchor is the baked RS_PUB_KEY only (get_key, 59750e7).
[[bin]]
name = "service"
path = "src/service.rs"

[features]
inline = []
cli = []
use_samplerate = ["samplerate"]
use_rubato = ["rubato"]
use_dasp = ["dasp"]
flutter = ["flutter_rust_bridge"]
# The `lockdown` build-split feature has been RETIRED (spec R-R2b; R-S16(a): the
# controlled-side policy is "enforced by every artifact, never behind a feature
# flag"). The fork is ONE binary, both roles, hardening UNCONDITIONAL: the
# PINNED_SETTINGS funnel (config.rs), the R-A1 unkeyed-stream guard (server.rs),
# the R-A3 set_raw assert (tcp.rs), the R-A4 startup + socket-surface asserts
# (rendezvous_mediator.rs), and the R-X8 terminal-refusal-by-pin (connection.rs)
# all compile into every shipped artifact, never behind a flag.
# REMAINING one-binary follow-on: delete the runtime SwitchPermission widener
# (connection.rs) per R-S16(d)(ii), so a mid-session re-widen of a content
# capability has no path (orthogonal to the terminal pin — SwitchPermission does
# not cover terminal/tunnel).
default = ["use_dasp"]
# TODO(one-binary): the fork ships SOFTWARE codec only — CPU-only vpx/aom (spec R-R2b,
# user directive: fewer C codecs linked, no GPU/VRAM). Never select `hwcodec`/`vram`
# (or ffmpeg amf/nvcodec/qsv) in any build path — no `--features hwcodec`/`--vram`.
# Defs kept only so upstream parity stays auditable.
hwcodec = ["scrap/hwcodec"]
vram = ["scrap/vram"]
mediacodec = ["scrap/mediacodec"]
linux-pkg-config = ["magnum-opus/linux-pkg-config", "scrap/linux-pkg-config"]
unix-file-copy-paste = [
    "dep:x11-clipboard",
    "dep:x11rb",
    "dep:percent-encoding",
    "dep:once_cell",
    "clipboard/unix-file-copy-paste",
]
screencapturekit = ["cpal/screencapturekit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
scrap = { path = "libs/scrap" }
hbb_common = { path = "libs/hbb_common" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
sha2 = "0.10"
# R-T10 (§20): TCP keepalive on accepted peer sockets, set at the rustdesk-crate accept site via
# socket2's SockRef + TcpKeepalive (with_interval / with_retries). hbb_common pins socket2 0.3
# (idle-only set_keepalive), so this direct 0.5 dep provides the full keepalive knobs WITHOUT a
# hbb_common 0.3→0.5 migration of the R-T11-hardened socket path. socket2 0.5 is already in-tree.
socket2 = "0.5"
repng = "0.2"
parity-tokio-ipc = { git = "https://github.com/rustdesk-org/parity-tokio-ipc" }
magnum-opus = { git = "https://github.com/rustdesk-org/magnum-opus" }
dasp = { version = "0.11", features = ["signal", "interpolate-linear", "interpolate"], optional = true }
rubato = { version = "0.12", optional = true }
samplerate = { version = "0.2", optional = true }
uuid = { version = "1.3", features = ["v4"] }
clap = "4.2"
rpassword = "7.2"
num_cpus = "1.15"
bytes = { version = "1.4", features = ["serde"] }
default-net = "0.14"
wol-rs = "1.0"
flutter_rust_bridge = { version = "=1.80", features = ["uuid"], optional = true}
errno = "0.3"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
url = { version = "2.3", features = ["serde"] }
crossbeam-queue = "0.3"
hex = "0.4"
chrono = "0.4"
cidr-utils = "0.5"
fon = "0.6"
zip = "0.6"
shutdown_hooks = "0.1"
# R-SV4(b)/R-D5/R-R3: `stunclient` removed — its only use was the dead NAT-type/IPv6 STUN
# probes (test_nat_ipv4/test_ipv6 → stun.l.google.com/cloudflare/nextcloud), excised. A
# direct-IP fork does no NAT traversal, so the STUN client + its transitive deps are dropped.
# R-SV4(b)/R-D5: kcp-sys (the KCP reliable-UDP transport for the relay/rendezvous connect-path) is ALSO
# dropped -- zero kcp usage remains after the direct-IP / TCP-only connect-path excision; a reliable-UDP
# transport dep is exactly what the no-UDP thesis sheds (a third-party git dep + its UDP machinery gone).

[target.'cfg(not(target_os = "linux"))'.dependencies]
# https://github.com/rustdesk/rustdesk/discussions/10197, not use cpal on linux
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "osx-screencapturekit" }
ringbuf = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
mac_address = "1.1"
# R-B6/R-R2: the `sciter-rs` fork (rustdesk-org/rust-sciter) is REMOVED — the legacy Sciter UI it
# backed is deleted (mod ui, src/ui/*.tis). Flutter is the sole front-end (§19); the fork's
# dependency delta stays net-negative (§16). No build links Sciter anymore.
sys-locale = "0.3"
enigo = { path = "libs/enigo", features = [ "with_serde" ] }
clipboard = { path = "libs/clipboard" }
ctrlc = "3.2"
# arboard = { version = "3.4", features = ["wayland-data-control"] }
arboard = { git = "https://github.com/rustdesk-org/arboard", features = ["wayland-data-control"] }
clipboard-master = { git = "https://github.com/rustdesk-org/clipboard-master" }
portable-pty = { git = "https://github.com/rustdesk-org/wezterm", branch = "rustdesk/pty_based_0.8.1", package = "portable-pty" }

system_shutdown = "4.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "wincrypt",
    "shellscalingapi",
    "pdh",
    "synchapi",
    "memoryapi",
    "shellapi",
    "devguid",
    "setupapi",
    "cguid",
    "cfgmgr32",
    "ioapiset",
    "winspool",
] }
windows = { version = "0.61", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
winreg = "0.11"
windows-service = "0.6"
virtual_display = { path = "libs/virtual_display" }
remote_printer = { path = "libs/remote_printer" }
# R-X9 (slices 2-4): `impersonate_system` (SYSTEM token-theft for run_as_system) and
# `shared_memory` (portable-service capture shmem) removed with the portable run-mode —
# both were used only by the excised src/server/portable_service.rs.
tauri-winrt-notification = "0.1"
runas = "1.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"
dispatch = "0.2"
core-foundation = "0.9"
core-graphics = "0.22"
include_dir = "0.7"
fruitbasket = "0.10"
objc_id = "0.1"
# If we use piet "0.7" here, we must also update core-graphics to "0.24".
piet = "0.6"
piet-coregraphics = "0.6"
foreign-types = "0.3"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
tray-icon = { git = "https://github.com/tauri-apps/tray-icon", version = "0.21.3" }
tao = { git = "https://github.com/rustdesk-org/tao", branch = "dev" }
image = "0.24"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
keepawake = { git = "https://github.com/rustdesk-org/keepawake-rs" }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
wallpaper = { git = "https://github.com/rustdesk-org/wallpaper.rs" }
tiny-skia = "0.11"
softbuffer = "0.4"
fontdb = "0.23"
bytemuck = "1.23"
ttf-parser = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
libxdo-sys = "0.11"
psimple = { package = "libpulse-simple-binding", version = "2.27" }
pulse = { package = "libpulse-binding", version = "2.27" }
rust-pulsectl = { git = "https://github.com/rustdesk-org/pulsectl" }
async-process = "1.7"
# R-X12/R-X13: evdev (raw /dev/input device reading) is dropped -- zero evdev:: usage remains after the
# Wayland/uinput input excision (X11 capture + XTEST/enigo injection is the sole input path); the
# third-party git dep was dead weight.
dbus = "0.9"
# R-X6: dbus-crossroads (the D-Bus SERVER framework) was the dead residual of the excised
# src/server/dbus.rs (the org.rustdesk.rustdesk NewConnection session-bus injection vector, commit
# e7cb30a) -- zero `dbus_crossroads`/`crossroads::` usage remains, so the dep is dropped. The base `dbus`
# crate stays (platform/linux.rs still makes a legit session-bus method_call, not the excised server).
# R-X14: the `pam` crate (the linux_desktop_manager PAM auth client / desktop-session-spawn oracle) is
# EXCISED -- zero `pam::` usage remains after that excision, so the dep + its transitive pam-sys libpam
# link + the .deb libpam0g Depends + the /etc/pam.d/rustdesk install were all dead weight (a third-party
# git dep dropped, shrinking the supply-chain + runtime-link surface the spec's sovereignty posture wants).
x11-clipboard = {git="https://github.com/clslaid/x11-clipboard", branch = "feat/store-batch", optional = true}
x11rb =  {version = "0.12", features = ["all-extensions"], optional = true}
percent-encoding = {version = "2.3", optional = true}
once_cell = {version = "1.18", optional = true}
nix = { version = "0.29", features = ["term", "process"]}
gtk = "0.18"
termios = "0.3"
terminfo = "0.8"
winit = "0.30"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
android-wakelock = { git = "https://github.com/rustdesk-org/android-wakelock" }

[workspace]
members = ["libs/scrap", "libs/hbb_common", "libs/enigo", "libs/clipboard", "libs/virtual_display", "libs/virtual_display/dylib", "libs/portable", "libs/remote_printer", "libs/pake", "libs/cpace_it", "libs/config_it", "libs/surface_it", "libs/compress_it", "libs/address_it", "libs/host_pin_it"]
exclude = ["vdi/host"]

# Patch libxdo-sys to use a stub implementation that doesn't require libxdo
# This allows building and running on systems without libxdo installed (e.g., Wayland-only)
[patch.crates-io]
libxdo-sys = { path = "libs/libxdo-sys-stub" }

[package.metadata.winres]
LegalCopyright = "Copyright © 2025 Purslane Ltd. All rights reserved."
ProductName = "RustDesk"
FileDescription = "RustDesk Remote Desktop"
OriginalFilename = "rustdesk.exe"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = [ "winnt", "pdh", "synchapi" ] }

[build-dependencies]
cc = "1.0"
hbb_common = { path = "libs/hbb_common" }
os-version = "0.2"

[dev-dependencies]
hound = "3.5"
docopt = "1.1"

[package.metadata.bundle]
name = "RustDesk"
identifier = "com.carriez.rustdesk"
icon = ["res/32x32.png", "res/128x128.png", "res/128x128@2x.png"]
osx_minimum_system_version = "10.14"

#https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
#opt-level = 'z' # only have smaller size after strip
rpath = true

[profile.dev]
debug = 1
