[package]
name = "config_it"
version = "0.1.0"
edition = "2021"
publish = false
description = "Integration test for the R-S16 PINNED_SETTINGS policy funnel (now UNCONDITIONAL — the lockdown build-split feature was retired, R-R2b). Depends on hbb_common's library with no dev-deps ⇒ no webrtc, compiles on the pinned 1.75 toolchain."

[lib]
path = "src/lib.rs"

[dev-dependencies]
hbb_common = { path = "../hbb_common" }
