[package]
name = "hbb_common"
version = "0.1.0"
authors = ["open-trade <info@opentradesolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# The `lockdown` build-split feature has been RETIRED (spec R-S16(a), R-R2b): the
# PINNED_SETTINGS policy + the get_option/is_option_can_save funnel (src/config.rs)
# and the R-A3 set_raw assert (src/tcp.rs) are now UNCONDITIONAL — enforced by every
# artifact, never behind a feature flag.

[dependencies]
# In-tree balanced CPace PAKE (§10). Pure-Rust, no native dep; reuses crates
# already in the lock, so this edge adds no new external crate (R-P14/§10.1).
pake = { path = "../pake" }
# new flexi_logger failed on rustc 1.75
flexi_logger = { version = "0.27", features = ["async"] }
protobuf = { version = "3.7", features = ["with-bytes"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
bytes = { version = "1.10", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
socket2 = { version = "0.3", features = ["reuseport"] }
zstd = "0.13"
anyhow = "1.0"
futures-util = "0.3"
directories-next = "2.0"
rand = "0.8"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.5"
confy = { git = "https://github.com/rustdesk-org/confy" }
dirs-next = "2.0"
filetime = "0.2"
sodiumoxide = "0.2"
regex = "1.11"
# R-S17/R-SV5: IDNA to_ascii for the pinned address normalization (address.rs).
# Already in the lock transitively (via url), so this edge adds no new crate.
idna = "1.0"
tokio-socks = { git = "https://github.com/rustdesk-org/tokio-socks" }
chrono = "0.4"
backtrace = "0.3"
libc = "0.2"
dlopen = "0.1"
toml = "0.7"
uuid = { version = "1.16", features = ["v4"] }
# new sysinfo issue: https://github.com/rustdesk/rustdesk/pull/6330#issuecomment-2270871442
sysinfo = { git = "https://github.com/rustdesk-org/sysinfo", branch = "rlim_max" }
# new flexi_logger failed on nightly rustc 1.75 for x86
thiserror = "1.0"
httparse = "1.10"
base64 = "0.22"
url = "2.5"
sha2 = "0.10"
whoami = "1.5"

tokio-rustls = { version = "0.26", features = [
    "logging",
    "tls12",
    "ring",
], default-features = false }
tokio-native-tls = "0.3"
rustls-platform-verifier = "0.6"
rustls-pki-types = "1.11"
rustls-native-certs = "0.8"
webpki-roots = "1.0.4"
async-recursion = "1.1"
libloading = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
mac_address = "1.1"
default_net = { git = "https://github.com/rustdesk-org/default_net" }
machine-uid = { git = "https://github.com/rustdesk-org/machine-uid" }

[build-dependencies]
protobuf-codegen = { version = "3.7" }

[dev-dependencies]
clap = "4.5.51"
# R-SV4: the WebRTC transport is FULLY EXCISED from the fork — `mod webrtc`
# (libs/hbb_common/src/webrtc.rs, a public-server ICE/STUN/TURN path antithetical to
# direct-IP-only) and its optional `webrtc` dependency are removed outright ("removed
# not disabled"), which prunes the whole webrtc/sdp/stun/turn/dtls crate tree from
# Cargo.lock. The only consumer of a `webrtc` dev-dependency had been examples/webrtc.rs
# (a dead WebRTC demo, removed); that dev-dep also failed to build on the pinned Rust
# 1.75 (its `sdp`/`webrtc-util` transitives use the 1.87 `is_multiple_of`), which had
# blocked `cargo test -p hbb_common` (the R-S8 fs/path safety tests).

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "handleapi",
    "jobapi2",
    "processthreadsapi",
    "winbase",
    "winnt",
    "winuser",
    "synchapi",
    "pdh",
    "memoryapi",
    "sysinfoapi",
    "iphlpapi",
    "iprtrmib",
    "tcpmib",
    "udpmib",
    "winerror",
    "ws2def",
] }

[target.'cfg(target_os = "macos")'.dependencies]
osascript = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
sctk = { package = "smithay-client-toolkit", version = "0.20.0", default-features = false, features = [
    "calloop",
] }
users = { package = "uzers", version = "0.12" }
x11 = "2.21"
