[package]
name = "surface_it"
version = "0.1.0"
edition = "2021"
publish = false
description = "Unit tests for the R-A4 live socket-surface parser/policy (hbb_common::socket_surface). Depends on hbb_common's library only (no dev-deps ⇒ no webrtc/sdp), so it compiles + runs on the pinned 1.75 toolchain. The pure parser/policy are platform-independent, so these tests run anywhere."

[lib]
path = "src/lib.rs"

[dev-dependencies]
hbb_common = { path = "../hbb_common" }
